
  * Added the possibility to show the current track cover in a window
  * Fixed a bug in default podcast directory creation
  * Added usb mass storage devices support
  * Added support for trueaudio files
  * Added support for wavpack files
  * Added option to embed album cover to all album tracks
  * Playlist panel now allow to select multiple playlists
  * Added an option to dont follow symbolic lyncs while doing the scanning. ( Thanks symphom )
  * Added an option to dont search for embedded covers in audio files
  * Fixed bug not preserving the directory selected for podcasts, recordings or saving lyrics
  * Added Magnatune support
  * Added Jamendo support
  * Added network buffer size option in Preferences under Online

2010-08-26 0.2.7
  
  * Double clicking in audioscroble icon in status bar opens AudioScrobble preferences
  * Now Preferences opens where it was closed 
  * Added options to delete tracks from library and drive
  * Implemented reading/writing images into m4a files
  * Library search covers scan now into audio files too
  * Added Jump to Next and Previous albums in playlist
  * Added Album Artist list box to the library tab
  * Improved library browse speed and memory usage
  * Added Now Playing searchs to the shoutcast radios
  * Added in Radio tab the now playing and stream format info
  * Added in Radio tab the option to reorder columns
  * Added option in preferences library tab to add playlists when doing a library scanning
  * Added Thailand translation. Thanks to mr_hangman
  * Added Norwegian translation. Thanks to jente_14
  * Added icelandic translation. Thanks to Hreinsi
  * Added text search in album browser
  * Added support for libre.fm
  * Added Enqueue as Next option so the selection is added as the next track to be played.
  * Implemented crossfading between tracks
  * Read composer, comments from ape and m4a files added
  * Added Lyric support to Ape files